--- a/Notes/Base.lproj/Main.storyboard
+++ b/Notes/Base.lproj/Main.storyboard
@@ -18,6 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="NoteCell" textLabel="3hY-2h-aa5" style="IBUITableViewCellStyleDefault" id="zYt-ur-qcS">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -29,6 +30,7 @@
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3hY-2h-aa5">
                                             <rect key="frame" x="16" y="0.0" width="324" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <gestureRecognizers/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -65,8 +67,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gtE-Gl-lKB">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gtE-Gl-lKB">
+                                <rect key="frame" x="16" y="64" width="359" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -74,10 +76,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Kpv-QZ-cmv" firstAttribute="trailing" secondItem="gtE-Gl-lKB" secondAttribute="trailing" constant="16" id="MaY-P7-18I"/>
-                            <constraint firstItem="gtE-Gl-lKB" firstAttribute="top" secondItem="Kpv-QZ-cmv" secondAttribute="top" constant="20" id="hM5-N1-3Qs"/>
-                            <constraint firstItem="Kpv-QZ-cmv" firstAttribute="bottom" secondItem="gtE-Gl-lKB" secondAttribute="bottom" constant="20" id="mJB-GP-ISz"/>
-                            <constraint firstItem="gtE-Gl-lKB" firstAttribute="leading" secondItem="Kpv-QZ-cmv" secondAttribute="leading" constant="16" id="xHJ-i4-nfu"/>
+                            <constraint firstItem="gtE-Gl-lKB" firstAttribute="top" secondItem="Kpv-QZ-cmv" secondAttribute="top" id="2sJ-1b-Njb"/>
+                            <constraint firstItem="gtE-Gl-lKB" firstAttribute="leading" secondItem="ide-GU-gNu" secondAttribute="leadingMargin" id="6WD-0C-lQL"/>
+                            <constraint firstItem="gtE-Gl-lKB" firstAttribute="bottom" secondItem="Kpv-QZ-cmv" secondAttribute="bottom" id="7DI-Nh-DQ7"/>
+                            <constraint firstAttribute="trailing" secondItem="gtE-Gl-lKB" secondAttribute="trailing" id="DhB-P3-DGS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Kpv-QZ-cmv"/>
                     </view>
